# tree-sitter-validatetest

./: .gitignore  Cargo.toml  Makefile  Package.swift  README-fmt.md  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-validatetest.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_validatetest/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterValidatetest/: validatetest.h
bindings/swift/TreeSitterValidatetestTests/: TreeSitterValidatetestTests.swift
queries/: highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  comments.txt  structures.txt  values.txt
