[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-validatetest"
version = "0.1.0"
description = "GStreamer ValidateTest grammar for tree-sitter"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thibault Saunier"}
]
keywords = ["gstreamer", "validate", "tree-sitter", "parser"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "tree-sitter>=0.22",
]

[project.urls]
Homepage = "https://github.com/gstreamer/tree-sitter-validatetest"

[tool.setuptools]
packages = ["tree_sitter_validatetest"]
package-dir = {"tree_sitter_validatetest" = "bindings/python/tree_sitter_validatetest"}
include-package-data = true

[tool.setuptools.package-data]
tree_sitter_validatetest = ["queries/*.scm"]
