[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "validatetest-fmt"
version = "0.1.3"
description = "Formatter for GStreamer ValidateTest files"
readme = "README-fmt.md"
license = {text = "MIT"}
authors = [
    {name = "Thibault Saunier"}
]
keywords = ["gstreamer", "validate", "formatter"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/thiblahute/tree-sitter-validatetest"

[tool.maturin]
bindings = "bin"
strip = true
